--- a/pgNovidades.html
+++ b/pgNovidades.html
@@ -34,7 +34,7 @@
     </main>
 
     <footer>
-        <a href="fastfood.ÉparaJá.html">
+        <a href="index.html">
             <p class="voltarfim">Voltar para pagina principal</p>
         </a>
     </footer>
