--- a/Quem.somos.html
+++ b/Quem.somos.html
@@ -50,7 +50,7 @@
 </main>
 
 <footer>
-    <a href="fastfood.ÉparaJá.html">
+    <a href="index.html">
         <p class="voltarfim">Voltar para pagina principal</p>
     </a>
 </footer>
