--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="produto">
-      <h3><img src="imagens/humb.2.png" alt="" class="burg"></h3>
+      <h3 style="margin-bottom: 130px;"><img src="imagens/humb.2.png" alt="" class="burg"></h3>
       <p class="nome">Burguer Salad</p>
       <p class="nome2">humburger artesanal, salada, cheddar</p>
       <p class="nome">R$12,00</p>
