--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </header>
 
   <main id="menu">
-    <!-- PRODUTOS -->
+    <!-- Hamburgues -->
     <div class="produto">
       <h3><img src="imagens/burger-6.png" alt="" class="burg"></h3>
       <p class="nome">Burguer Top</p>
